# dare

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
configs/: config.txt
src/: main.cpp
src/auth/: Authentication.cpp  Authentication.h
src/data/: Enrollment.cpp  Enrollment.h  Links.h  Regexes.h  Terms.cpp  Terms.h
src/registration/: Register.cpp  Register.h  RegistrationUtil.cpp  RegistrationUtil.h
src/task/: ConfigLoader.cpp  ConfigLoader.h  CourseManager.cpp  CourseManager.h  SessionManager.cpp  SessionManager.h  Task.h  TaskConfig.h  TaskLogger.cpp  TaskLogger.h  TaskManager.cpp  TaskManager.h  TaskScheduler.cpp  TaskScheduler.h
src/util/: Course.h  Exceptions.h  Requests.cpp  Requests.h  Utility.cpp  Utility.h
src/version/: Version.cpp  Version.h.in
